of using a single large pre-sieved buffer primesieve now uses
4 smaller pre-sieved buffers which are bitwise AND together before
being copied to the sieve array. The new pre-sieveing algorithm
provides a speedup of up to 10% when generating the primes < 10^11.
Thanks to @zielaj for this amazing work!

* PreSieve.cpp: Add multiple pre-sieve buffers #110.

Changes in version 7.7, 13/11/2021
==================================

The CPU cache size detection has been improved. The code now better
handles uncertain situations when CPU cache information is only
partially available. If the CPU cache detection fails entirely, then
the new code uses a larger sieve size (than before) that will most
likely provide a significant speedup. Most BSD operating systems
that are currently not supported in CpuInfo.cpp will benefit from
this change.

The behavior of the -q/--quiet option has been modified. Before it
printed e.g. "Primes: 1229", while with the new behavior the
"Primes:" label will not be printed anymore. Hence the new output
will be "1229". This is a backwards incompatible change, however I
won't increase primesieve's major version since this change does not
affect primesieve's API/ABI.

* CpuInfo.cpp: Fix issues with big.LITTLE CPUs #105.
* api.cpp: Simplify private L2 cache size detection #103.
* config.cpp: Add fallback sieve size & L1 data cache size.
* Erat.cpp: If runtime CPU cache detection fails use
  config::L1D_CACHE_BYTES. 
* main.cpp: Improve -q/--quiet option #102.
* api-c.cpp: Print error messages to stderr.
* iterator-c.cpp: Print error messages to stderr.
* doc/primesieve.1: Update man page.
* CMakeLists.txt: Add WITH_MSVC_CRT_STATIC option to force static linking.
* C_Examples.md: Add CMake build instructions.
* CPP_Examples.md: Add CMake build instructions.

Changes in version 7.6, 18/12/2020
==================================

* The primesieve GUI application has been deprecated/removed.
  It only works with QT4 which has reached end-of-life.